# lifecycle

./: .gitignore  .gitlab-ci.yml  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  LICENSE  Pipfile  README.md  lifecycle.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: docs.yml  linting.yml  pylint.yml  release.yml  testing.yml
docs/: Makefile
docs/source/: api.rst  conf.py  index.rst  usage.rst
examples/: freeipa-server.sh
examples/config/: source.yml  target.yml
examples/suitecrm/: docker-compose.yml  suitecrm.sh
lib/ConfigReader/: __init__.py
lib/config_reader/: __init__.py
lib/models/: __init__.py
lifecycle/: __init__.py  cli.py  config_reader.py  model_diff.py  models.py  source_ldap.py  source_ldap3.py  source_staticconfig.py  target_ldap3.py  target_suitecrm.py
tests/: mock_suitecrm_server.py  test__init__.py  test_config.py  test_models_diff.py  test_models_group.py  test_models_user.py  test_source_ldap.py  test_source_ldap3.py  test_source_staticconfig.py  test_target_suitecrm.py  tests_config.py
tests/config/: broken.yml
tests/config/working/: 0.yml  1.yml
